Dommerplan 1.6.5 - Martin Juhl - mj@casalogic.dk

  * Tilføjet bookning af kampe i mobil-sitet
  * Tilføjet acceptering af bookede kampe i admin-interface..

Dommerplan 1.6.4 - Martin Juhl - mj@casalogic.dk

  * Fix til ical...

Dommerplan 1.6.3 - Martin Juhl - mj@casalogic.dk

  * Rettelser til ekstra hjemmebaner...

Dommerplan 1.6.2 - Martin Juhl - mj@casalogic.dk

  * Tilføjelse af ekstra hjemmebaner..

Dommerplan 1.6.1 - Martin Juhl - mj@casalogic.dk

  * Rettelser til Sync

Dommerplan 1.6.0 - Martin Juhl - mj@casalogic.dk

  * Fix til installation

Dommerplan 1.5.9 - Martin Juhl - mj@casalogic.dk

  * Fix til Bug i Sync...

Dommerplan 1.5.8 - Martin Juhl - mj@casalogic.dk

  * Fix til Dommertjans iCal's...

Dommerplan 1.5.7 - Martin Juhl - mj@casalogic.dk

  * Fix til tidszoner i iCal...

Dommerplan 1.5.6 - Martin Juhl - mj@casalogic.dk

  * Fix til ICal, til import fra Wordpress..

Dommerplan 1.5.5 - Martin Juhl - mj@casalogic.dk

  * Søster-klub support af kalendere (ICal)..

Dommerplan 1.5.4 - Martin Juhl - mj@casalogic.dk

  * Central styring af VIEWSTATE og EVENTVALIDATION fra resultater.basket.dk

Dommerplan 1.5.3 - Martin Juhl - mj@casalogic.dk

  * Hover info på statistisk
  * Fjernet advarsler fra MySQL (tilgængelige i debug-mode)

Dommerplan 1.5.2 - Martin Juhl - mj@casalogic.dk
  
  * Tilføjelser til Mobil-site
  * Ny dommer-statistik.. 
  * Tilføjelser til brugerdel
  * Diverse Fixes...

Dommerplan 1.5.1 - Martin Juhl - mj@casalogic.dk
  
  * Tilføjelser til Mobil version
  * Statistik modul til Dommertjanser

Dommerplan 1.5.0 - Martin Juhl - mj@casalogic.dk
  
  * Første Version af Mobil Version..

Dommerplan 1.4.0 - Martin Juhl - mj@casalogic.dk

  * Fix til ICal..

Dommerplan 1.3.9 - Martin Juhl - mj@casalogic.dk

  * Tilføjet mere kampinfo til iCal..
  * Rettet dommerplansintegration..

Dommerplan 1.3.8 - Martin Juhl - mj@casalogic.dk

  * Tilføjet muligheder for søsterklubber..
  * Oprydning i konfiguration..
