@@ -1,3 +1,10 @@
+Dommerplan 1.6.6 - Martin Juhl - mj@casalogic.dk
+
+  * Tilføjet Log ud knap til mobil-sitet..
+  * Fixet bug i valg af hold..
+  * Oprydning i bruger-styring..
+  * Ny bruger menu i webinterface..
+
 Dommerplan 1.6.5 - Martin Juhl - mj@casalogic.dk
 
   * Tilføjet bookning af kampe i mobil-sitet
